implement shapedforgingrecipebuilder